examples/good/nested.ypl
main(): {
    y=10;
    lam funB(): {
        out(y);
    }
    lam funC(): {
        local y=15;
        funB();
    }
    funC();
}