examples/bad/divZero.ypl
main(): {
    out(2/0);
}